# MCpp-Server

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  countLinesOfCode  countNonEmptyLines  sedToTemp  todo
src/: AutoDeleter.hpp  AutoLock.hpp  ChatServer.cpp  ChatServer.hpp  CommandSender.hpp  Condition.cpp  Condition.hpp  ConsoleReader.cpp  ConsoleReader.hpp  Difficulty.hpp  EntityManager.cpp  EntityManager.hpp  Future.cpp  Future.hpp  GameMode.hpp  Lock.cpp  Lock.hpp  Makefile  Makefile.am  Makefile.in  Makefile.old  MinecraftServer.cpp  MinecraftServer.hpp  MinecraftServerData.hpp  MyExcept.hpp  Pimpl.hpp  ReentrantLock.cpp  ReentrantLock.hpp  Scheduler.cpp  Scheduler.hpp  Scheduler.tcc  SchedulerSimple.hpp  SchedulerThread.cpp  SchedulerThread.hpp  ServerCommandSender.cpp  ServerCommandSender.hpp  Unicode.cpp  WorldType.hpp  int128.h  main.cpp  (+1 more)
src/.deps/: ClientConnection.Po  Logger.Po  MinecraftServer.Po  NetUtils.Po  NetworkServer.Po  Packet.Po  PacketHandler.Po  SocketInputStream.Po  SocketOutputStream.Po
src/command/: Command.cpp  Command.hpp  CommandDispatcher.hpp  CommandManager.cpp  CommandManager.hpp
src/entity/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/event/: Cancellable.hpp  Event.cpp  Event.hpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  EventType.hpp
src/event/entity/: EntityEvent.hpp  EntityMoveEvent.hpp
src/event/entity/player/: PlayerChatEvent.cpp  PlayerChatEvent.hpp  PlayerDigEvent.cpp  PlayerDigEvent.hpp  PlayerEvent.cpp  PlayerEvent.hpp
src/game/: Block.cpp  Block.hpp  BlockAccess.cpp  BlockAccess.hpp  BlockCoordinates.hpp  BlockType.hpp  Chunk.cpp  Chunk.hpp  ChunkCoordinates.hpp  ChunkLoader.cpp  ChunkLoader.hpp  Coordinate.hpp  Coordinates.hpp  DoubleInventory.cpp  DoubleInventory.hpp  EntityManager.cpp  EntityManager.hpp  Inventory.hpp  InventoryHolder.hpp  ItemStack.cpp  ItemStack.hpp  PlayerInventory.cpp  PlayerInventory.hpp  PlayerWorldData.hpp  Point2D.hpp  Point3D.hpp  Points.cpp  SingleInventory.cpp  SingleInventory.hpp  World.cpp  World.hpp  WorldLoadingFailure.hpp
src/game/block/: Block.cpp  Block.hpp  BlockAccess.cpp  BlockId.hpp
src/game/entity/: Entity.cpp  Entity.hpp  EntityData.hpp  EntityItem.cpp  EntityItem.hpp  EntityItemData.hpp  Player.cpp  Player.hpp  PlayerData.hpp
src/logging/: .ConsoleHandler.hpp.swp  .Logger.cpp.swp  .Logger.hpp.swp  ConsoleHandler.cpp  ConsoleHandler.hpp  Handler.hpp  Level.hpp  Logger.cpp  Logger.hpp  LoggerStreamBuf.cpp  LoggerStreamBuf.hpp  UIHandler.cpp  UIHandler.hpp
src/network/: ClientConnection.cpp  ClientConnection.hpp  EncryptedSocketInputStream.cpp  EncryptedSocketInputStream.hpp  EncryptedSocketOutputStream.cpp  EncryptedSocketOutputStream.hpp  EncryptedSocketStream.cpp  EncryptedSocketStream.hpp  NetUtils.cpp  NetUtils.hpp  NetworkServer.cpp  NetworkServer.cpp.orig  NetworkServer.cpp~  NetworkServer.hpp  Packet.cpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketType.hpp  Packets.hpp  PlainSocketInputStream.cpp  PlainSocketInputStream.hpp  PlainSocketOutputStream.cpp  PlainSocketOutputStream.hpp  PlainSocketStream.cpp  ProtocolException.hpp  SocketInputStream.cpp  SocketInputStream.hpp  SocketOutputStream.cpp  SocketOutputStream.hpp  SocketStream.hpp
src/network/packets/: GenericPacket.hpp  PacketChatMessage.hpp  PacketHelper.hpp
src/plugin/: Plugin.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  SOPluginLoader.cpp  SOPluginLoader.hpp
src/test/: TestClient.java  TestUnicode.cpp
src/ui/: UIManager.cpp  UIManager.hpp
src/ui/cli/: CliUIManager.cpp  CliUIManager.hpp  ConsoleReader.cpp  ConsoleReader.hpp
src/util/: ArgumentEnumerator.hpp  ArrayAccessor.hpp  FSUtils.cpp  FSUtils.hpp  StringUtils.cpp  StringUtils.hpp  TemplateUtils.hpp  Unicode.cpp  Unicode.hpp  Utils.cpp  Utils.hpp  triple.hpp  utils.hpp
